# PromiseDemo

./: CMakeLists.txt  asyncactions.cpp  asyncactions.h  main.cpp  main.qml
QuickFuture/: libquickfutureqmlplugin.dylib
